added new version of lombok to pom